--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/roll"
+                    android:id="@+id/mail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
@@ -102,8 +102,8 @@
                     android:layout_marginEnd="30dp"
                     android:background="@android:color/transparent"
                     android:ems="10"
-                    android:hint="KIIT ID"
-                    android:inputType="number"
+                    android:hint="KIIT E-Mail"
+                    android:inputType="textEmailAddress"
                     android:padding="15dp"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -148,6 +148,7 @@
                     android:layout_marginEnd="50dp"
                     android:background="@drawable/button_login"
                     android:backgroundTint="#10173C"
+                    android:onClick="onClick"
                     android:text="LogIn"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
