--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -335,6 +335,7 @@
                     android:layout_marginEnd="50dp"
                     android:background="@drawable/button_login"
                     android:backgroundTint="#10173C"
+                    android:onClick="onReg"
                     android:text="Register"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
