--- a/app/src/main/res/layout/individualcard.xml
+++ b/app/src/main/res/layout/individualcard.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:layout_height="match_parent"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView
+    android:layout_height="100dp"
+    android:layout_width="100dp"
     android:id="@+id/homecard"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
     app:cardCornerRadius="6dp"
     app:cardElevation="6dp">
+
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/cardsubject"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/cardsubject"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:gravity="center"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
+
 
 </androidx.cardview.widget.CardView>
