--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DashBoard"
+    android:background="@drawable/bd"
     android:orientation="vertical">
 
     <include layout="@layout/app_bar"
@@ -13,6 +14,7 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
+        android:background="@drawable/bd"
         android:layout_height="match_parent"
         android:layout_weight="1"/>
     <com.google.android.material.tabs.TabLayout
