--- a/app/src/main/res/layout/activity_question_paper_upload.xml
+++ b/app/src/main/res/layout/activity_question_paper_upload.xml
@@ -152,20 +152,33 @@
                 android:layout_marginEnd="50dp"
                 android:background="@drawable/button_login"
                 android:backgroundTint="#10173C"
+                android:onClick="onUploadpaper"
                 android:text="Select"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/notify"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="No File Selected"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="italic" />
 
             <Button
                 android:id="@+id/upload"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="50dp"
                 android:background="@drawable/button_login"
                 android:backgroundTint="#10173C"
+                android:onClick="onUploadpaper"
                 android:text="Upload"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
