--- a/app/src/main/res/layout/individualcard.xml
+++ b/app/src/main/res/layout/individualcard.xml
@@ -16,7 +16,8 @@
         android:gravity="center"
         android:layout_gravity="center_horizontal|center_vertical"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="22sp"
+        android:textStyle="bold"/>
 
 
 </androidx.cardview.widget.CardView>
