--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Previous Year Papers   >>>"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:layout_margin="5dp"
             android:textStyle="bold|italic"
             android:id="@+id/allprev"/>
         <androidx.recyclerview.widget.RecyclerView
@@ -29,7 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Notes   >>>"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:layout_margin="5dp"
             android:textStyle="bold|italic"
             android:id="@+id/allnotes"/>
         <androidx.recyclerview.widget.RecyclerView
@@ -41,7 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Resources for Exam   >>>"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:layout_margin="5dp"
             android:textStyle="bold|italic"
             android:id="@+id/allresource"/>
         <androidx.recyclerview.widget.RecyclerView
@@ -53,7 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Research Paper   >>>"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:layout_margin="5dp"
             android:textStyle="bold|italic"
             android:id="@+id/allresearch"/>
         <androidx.recyclerview.widget.RecyclerView
