--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -22,12 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:minHeight="?actionBarSize"
-        app:tabBackground="@color/white"
+        app:tabBackground="@color/appbarbackground"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/black"
+        app:tabIndicatorColor="@color/white"
         app:tabIndicatorHeight="1dp"
         app:tabMode="fixed" />
-
-
-
 </LinearLayout>
