--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/white"
+    android:background="@color/appbarbackground"
     android:gravity="center_vertical"
     app:layout_collapseMode="pin"
     app:layout_scrollFlags="scroll|enterAlways"
