Mudit:button cahnged ,add activity changed

--- a/app/src/main/res/layout/activity_available_subject_notes.xml
+++ b/app/src/main/res/layout/activity_available_subject_notes.xml
@@ -41,12 +41,14 @@
 
     </LinearLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:onClick="searchitem"
+        android:backgroundTint="#10173C"
+        app:cornerRadius="20dp"
         android:text="Go"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
