--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -139,14 +139,14 @@
                     android:layout_marginEnd="40dp"
                     android:background="#5A5A5A" />
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/signin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="40dp"
                     android:layout_marginEnd="50dp"
-                    android:background="@drawable/button_login"
+                    app:cornerRadius="20dp"
                     android:backgroundTint="#10173C"
                     android:onClick="onClick"
                     android:text="LogIn"
