--- a/app/src/main/res/layout/activity_available_subject_tutorials.xml
+++ b/app/src/main/res/layout/activity_available_subject_tutorials.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".AvailableSubjectTutorials">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listItems"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
